--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -42,6 +42,7 @@
             font-size: 50px;
             text-align: right;
             overflow: hidden;
+            margin-bottom: 0px;
         }
 
         .history {
@@ -57,7 +58,7 @@
         }
 
         .btn {
-            margin: 10px 0px;
+            margin: 7px 0px;
             font-size: 28px;
             width: 80px;
             height: 80px;
